SDI-182: 🐛 Fix night shift png not appearing

--- a/assets/sass/_calendar.scss
+++ b/assets/sass/_calendar.scss
@@ -152,7 +152,7 @@ ul.calendar {
     }
 
     &.night_start, &.night_finish {
-      background-image: url("../assets/images/night-shift.PNG");
+      background-image: url("/assets/images/night-shift.PNG");
       background-repeat: no-repeat;
       background-size: 25px 20px;
       background-position: top 0 right;
